Fixed body spacing.

--- a/app/assets/stylesheets/markets.scss
+++ b/app/assets/stylesheets/markets.scss
@@ -2,9 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .all-markets {
-  margin-top: 80px;
+  margin-top: 40px;
 }
-
 
 .details {
   text-align: left;
